@@ -150,6 +150,7 @@ AC_CHECK_ENABLE_CACAO
 AC_CHECK_WITH_CACAO_HOME
 AC_CHECK_WITH_CACAO_SRC_ZIP
 IT_CHECK_ENABLE_JAMVM
+IT_CHECK_WITH_JAMVM_SRC_ZIP
 
 DISABLE_OPTIMIZATIONS
 SET_SHARK_BUILD
